--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "date-fns": "^2.28.0",
+    "express": "^4.17.2",
+    "pino": "^7.6.3",
+    "pino-pretty": "^7.4.0"
   },
   "config": {
     "commitizen": {
